fix: prevent the sandbox editor from shrinking too much

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -33,7 +33,7 @@ $link-dark: $cyan;
 
 #editor {
   background: $background;
-  min-height: 50%;
+  min-height: 50svh;
 }
 
 #editor > * {
